# drtrex

./: .coverage  .gitignore  README.md  instrument_old.py  pixi.toml  pyproject.toml  trex_params.json
.github/: publish.yml
.github/workflows/: tests.yml
jupyter/: 0_ess_source.ipynb  10_inelastic_frame_overlap_slowPS.ipynb  1_visualize_choppers.ipynb  2_time_distance_diagram.ipynb  3_acceptance_diagram.ipynb  3_acceptance_diagram_with_mask.ipynb  4_determine_ei.ipynb  5_elestic_resolution.ipynb  6_qe_coverage.ipynb  7_inelastic.ipynb  7_inelastic_fast_neutrons.ipynb  8_inelastic_frame_overlap.ipynb  9_frame_overlap_benchmark.ipynb  ess_source.ipynb  time_distance_diagram.ipynb  trex.ipynb  visualize_choppers.ipynb
jupyter/9_inelastic_frame_overlap_solutions/: 9_1_inelastic_frame_overlap_original.ipynb  9_2_inelastic_frame_overlap_slow.ipynb  9_2_inelastic_frame_overlap_slow_m2.ipynb  9_3_inelastic_frame_overlap_slow_m1.ipynb  9_3_inelastic_frame_overlap_slow_p3p4.ipynb  9_4_extra_choppers.ipynb  9_4_inelastic_frame_overlap_slow_m2_80meV.ipynb  9_5_inelastic_frame_overlap_slow_m2_50meV.ipynb  9_6_inelastic_frame_overlap_slow_m2_50meV_multiple.ipynb
src/drtrex/: instrument.py  lechner.py  params.py  sample.py
src/drtrex/components/: chopper.py  detector.py  monitor.py  source.py  utils.py
src/instrument/: chopper.py
src/trex/: chopper.py  detector.py  instrument.py  monitor.py  source.py  utils.py
src/trex/components/: __init__.py  detector.py
tests/: test_chopper.py  test_instrument.py  test_monitor.py  test_monitor_detector.py  test_source.py  test_utils.py
