[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "drtrex"
version = "0.1.2"
description = "Data reduction for T-REX at ESS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.16.0",
    "ipykernel<7",
    "ipympl>=0.10.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.6",
    "pip>=26.0.1",
    "plopp>=26.4.2",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "scipp>=26.3.1",
    "scippneutron>=26.6.0",
    "tof>=26.6.1",
]
